# IT-3004

./: .gitignore  .gitmodules  Doxyfile  README.md  meson.build
benchmarks/: edge_insertion_benchmark.cpp  meson.build  node_insertion_benchmark.cpp
src/graph/: algorithms.hpp  edge.hpp  graph.hpp  list_graph.cpp  list_graph.hpp  list_graph.tcc  list_node.cpp  list_node.hpp  list_node.tcc  matrix_graph.cpp  matrix_graph.hpp  matrix_graph.tcc  matrix_node.cpp  matrix_node.hpp  matrix_node.tcc  meson.build  printing.cpp  printing.hpp  properties.hpp  utility.hpp
tests/: .clang  algorithms_testing.cpp  graph_testing.cpp  graphviz.cpp  list_graph_testing.cpp  matrix_graph_testing.cpp  meson.build  printing_testing.cpp
